<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="leer"> </string>
    <string name="app_name">EgiGeoZoneBT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="geofence">Geofence  name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitudeOpt">Latitude (optional)</string>
    <string name="longitudeOpt">Longitude (optional)</string>
    <string name="geofenceHint">Enter geofence name</string>
    <string name="latitudeHint">Enter latitude</string>
    <string name="longitudeHint">Enter longitude</string>
    <string name="alias">Alias (optional)</string>
    <string name="aliasHint">Alias name for zone</string>
    <string name="menu_item_clear_geofence">Clear fields</string>
    <string name="menu_item_get_location">Current location</string>
    <string name="menu_item_accuracy">Accuracy</string>
    <string name="radius">Radius</string>
    <string name="certName">Certificate (PKCS12)</string>
    <string name="certPasswd">Password</string>
    <string name="caCertName">CA certificates  (PEM)</string>
    <string name="urlEntered">URL zone entered</string>
    <string name="urlExited">URL zone exited</string>
    <string name="user">User</string>
    <string name="userPasswd">Password</string>
    <string name="wifiInfo">WiFi MAC (only for exit)</string>
    <string name="radiusHint">Enter radius in meters</string>
    <string name="certNameHint">Enter private certificate(PKCS12)</string>
    <string name="certPasswdHint">Enter certificate password</string>
    <string name="caCertNameHint">Enter CA certificates</string>
    <string name="urlEnteredHint">Enter URL for entering zone</string>
    <string name="urlExitedHint">Enter URL for exiting zone</string>
    <string name="userHint">Enter user for basic authentication</string>
    <string name="userPasswdHint">Enter password for basic authentication</string>
    <string name="fhem_geofancyHint">"Enter URL for Fhem Geofancy modul"</string>
    <string name="trackingHint">"Enter URL for tracking"</string>
    <string name="timeoutHint">"Default is 30"</string>
    <string name="wifiHint">Optional for accuracy</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_privacy">Privacy policy</string>
    <string name="menu_item_all_geozones">Show all Geozones</string>
    <string name="menu_item_profiles">Profiles</string>
    <string name="menu_item_settings">Settings</string>
    <string name="admin">Administration</string>
    <string name="menu_item_log">Show last log file</string>
    <string name="menu_item_send_log">Send last log file</string>
    <string name="menu_item_configuration">Configuration</string>
    <string name="menu_item_debug">Log level</string>
    <string name="menu_item_export">Export to:</string>
    <string name="menu_item_import">Import from:</string>
    <string name="menu_item_plugins">Show registered plugins</string>
    <string name="menu_item_track">Location tracking</string>
    <string name="menu_item_beacon_params">Beacon scan periods</string>
    <string name="export_ok_text">Configuration exported.</string>
    <string name="import_ok_text">Configuration registered.</string>
    <string name="settings_tracker">General location tracker settings</string>
    <string name="loc_interval">Time in minutes between location updates (polling)</string>
    <string name="profilName">Profile name</string>
    <string name="execFor">Execute at</string>
    <string name="enter">entering zone</string>
    <string name="exit">leaving zone</string>
    <string name="test_ok_text">The test was successful.</string>
    <string name="test_ok_text_more">The test was successful. Check the changed settings.</string>
    <string name="test_ok_title">Test OK</string>
    <string name="test_nok_title">Test failed</string>
    <string name="prio_low">Low power accuracy (about 10 km accuracy)</string>
    <string name="prio_balanced">Balanced power accuracy (about 100 meter accuracy)</string>
    <string name="prio_high">High power accuracy (finest location available)</string>
    <string name="app_debug">Log level</string>
    <string name="app_plugins">Registered plugins</string>
    <string name="fhem_geofancy">URL Fhem Geofancy</string>
    <string name="srv_tracking">URL for tracking</string>
    <string name="descCerts">Certificates must be stored under \'internal storage/egigeozone\'</string>
    <string name="descfhemGeofancy">Fhem/Geofancy-Style address. Example: https://rpi.server.de:1999/webhook/geo</string>
    <string name="descTracking">Tracking address. Example: http://server:port/xyz/track.php?latitude=${latitude}&amp;longitude=${longitude}&amp;date=${date}&amp;device=${androidId}&amp;zone=${zone}</string>
    <string name="descor1">or</string>
    <string name="geofence_not_available">Geofence service is not available. Turn on location access in settings and try again. Redirected to the Location Settings?</string>
    <string name="geofence_too_many_geofences">Your app has registered more than 100 geofences. Remove unused ones before adding new geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided more than 5 different PendingIntents. Please contact developer.</string>
    <string name="add_geofences_result_success">
        Add Geofences: Success
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_not_greater_zero">Value must be greater or equal zero</string>
    <string name="geofence_input_error_comma">Character not allowed in name.</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="bt_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 50 meter or greater.
    </string>
    <string name="geofence_transition_entered">entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="info_title">Short description</string>
    <string name="info">EgiGeoZone is an Android Geofencing app, which uses several sensors on your phone or tablet to detect your location and then to trigger different actions when entering or leaving predefined zones that you can configure. It can trigger many actions directly, or simply display a notification on screen. In other words, the app works in a similar way to apps like Tasker, which allows certain events to initiate an action on your smartphone or even a remote server.</string>
    <string name="disclaimer_title">Disclaimer - End User License Agreement</string>
    <string name="sms_info_title">Sending SMS prohibited by Google</string>
    <string name="sms_info">Google has informed me that starting January 9, 2019, SMS sending will no longer be allowed in the background. If the feature is not disabled, the app will be blocked. A request for a special permit was rejected.</string>
    <string name="info_1">See here:\n <a href="https://android-developers.googleblog.com/2018/10/providing-safe-and-secure-experience.html">https://android-developers.googleblog.com/2018/10/providing-safe-and-secure-experience.html</a></string>
    <string name="info_2">And here:\n <a href="https://play.google.com/about/privacy-security-deception/permissions/">https://play.google.com/about/privacy-security-deception/permissions/</a></string>
    <string name="beaconsScanOn">Stop beacons scan</string>
    <string name="beaconsScanOff">Start beacons scan</string>
    <string name="notification">Notification (enter/exit zone)</string>
    <string name="error_notification">Error notification</string>
    <string name="sticky_notification">Permanent notification</string>
    <string name="broadcast">Allow broadcasting to plugins</string>
    <string name="gcm">Receive GCM notifications</string>
    <string name="gcm_logging">Log GCM notifications</string>
    <string name="menu_item_show_gcm_log">Show GCM logging</string>
    <string name="gcm_sender_id">GCM project number</string>
    <string name="getApiKey">Get GCM-API-Key</string>
    <string name="ignoreFalseReports">Ignore false reports</string>
    <string name="beacon_scan_periods">All periods in milliseconds. If you do not know what this periods are, then leave them at default. </string>
    <string name="beacon_foreground_scan_period">Foreground scan period</string>
    <string name="beacon_foreground_between_scan_period">Foreground between scan periods</string>
    <string name="beacon_background_scan_period">Background scan period</string>
    <string name="beacon_background_between_scan_period">Background between scan periods</string>
    <string name="beacon_scan_period_hint">Period in milliseconds</string>
    <string name="google">Google</string>
    <string name="pathsense">PathSense</string>
    <string name="reset_all_geofence_states">Reset all fence states</string>
    <string name="colors">Colors</string>
</resources>