<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
	<LinearLayout 
	    android:orientation="vertical"
	    android:baselineAligned="false"
	    android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	
	   <ImageView android:id="@+id/icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dip" 
	        android:layout_marginEnd="10dip" 
	        android:src="@drawable/ic_launcher_3"
	        android:clickable="true"
		   tools:ignore="ContentDescription" />
	<LinearLayout 
	    android:orientation="vertical"
	    android:baselineAligned="false"
	    android:gravity="center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#c6cbd2">
		    <TextView android:id="@+id/text" android:text="@string/sms_info_title" android:layout_height="wrap_content" android:layout_width="wrap_content"
		    	 android:textStyle="bold"/>
	</LinearLayout>
    <TextView
		android:text="@string/sms_info" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	<TextView
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/info_1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	<TextView
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/info_2"
        android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
</ScrollView> 
